// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchBox overrides internal state with prop 1`] = `
<Fragment>
  <span
    className="__SearchBox__ ant-input-group"
    data-testid="searchbox"
  >
    <span
      className="ant-input-group-addon"
    >
      <Connect(SearchBoxNamespaceSelect) />
    </span>
    <ForwardRef(AutoComplete)
      autoFocus={true}
      className="autocomplete"
      dropdownMatchSelectWidth={true}
      onSelect={[Function]}
      options={Array []}
      popupClassName="header-dropdown"
      value="internal"
    >
      <Search
        data-test-id="search-box-input"
        enterButton={true}
        onChange={[Function]}
        onSearch={[Function]}
        size="large"
      />
    </ForwardRef(AutoComplete)>
  </span>
</Fragment>
`;

exports[`SearchBox render initial state with all props set 1`] = `
<Fragment>
  <span
    className="__SearchBox__ ant-input-group"
    data-testid="searchbox"
  >
    <span
      className="ant-input-group-addon"
    >
      <Connect(SearchBoxNamespaceSelect) />
    </span>
    <ForwardRef(AutoComplete)
      autoFocus={true}
      className="autocomplete"
      dropdownMatchSelectWidth={true}
      onSelect={[Function]}
      options={Array []}
      popupClassName="header-dropdown"
      value="value"
    >
      <Search
        data-test-id="search-box-input"
        enterButton={true}
        onChange={[Function]}
        onSearch={[Function]}
        placeholder="placeholder"
        size="large"
      />
    </ForwardRef(AutoComplete)>
  </span>
</Fragment>
`;

exports[`SearchBox renders new value on change 1`] = `
<Fragment>
  <span
    className="__SearchBox__ ant-input-group"
    data-testid="searchbox"
  >
    <span
      className="ant-input-group-addon"
    >
      <Connect(SearchBoxNamespaceSelect) />
    </span>
    <ForwardRef(AutoComplete)
      autoFocus={true}
      className="autocomplete"
      dropdownMatchSelectWidth={true}
      onSelect={[Function]}
      options={Array []}
      popupClassName="header-dropdown"
      value="new"
    >
      <Search
        data-test-id="search-box-input"
        enterButton={true}
        onChange={[Function]}
        onSearch={[Function]}
        size="large"
      />
    </ForwardRef(AutoComplete)>
  </span>
</Fragment>
`;
